force-app/main/default/objects/Visa_Letter__c/Visa_Letter__c.object-meta.xml
<CustomObject>
    <label>Visa Letter</label>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>Visa Letter</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visa Letters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>