force-app/main/default/objects/Visa_Letter__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <label>Authority</label>
    <length>80</length>
    <type>Text</type>
</CustomField>