force-app/main/default/objects/Visa_Letter__c/fields/Event_Participation__c.field-meta.xml
<CustomField>
    <fullName>Event_Participation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Participation</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Visa Letter</relationshipLabel>
    <relationshipName>Visa_Letter</relationshipName>
    <type>Lookup</type>
</CustomField>