force-app/main/default/objects/Visa_Letter__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>his</fullName>
                <label>Male</label>
            </value>
            <value>
                <fullName>her</fullName>
                <label>Female</label>
            </value>
            <value>
                <fullName>their</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>