force-app/main/default/objects/Visa_Letter__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <length>80</length>
    <type>Text</type>
</CustomField>