force-app/main/default/objects/Visa_Letter__c/fields/Official_City__c.field-meta.xml
<CustomField>
    <fullName>Official_City__c</fullName>
    <label>Official City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>