force-app/main/default/objects/Visa_Letter__c/fields/Official_Country__c.field-meta.xml
<CustomField>
    <fullName>Official_Country__c</fullName>
    <label>Official Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>