force-app/main/default/objects/Visa_Letter__c/fields/Official_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Official_State_Province__c</fullName>
    <label>Official State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>