force-app/main/default/objects/Visa_Letter__c/fields/Official_Street__c.field-meta.xml
<CustomField>
    <fullName>Official_Street__c</fullName>
    <label>Official Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>