force-app/main/default/objects/Visa_Letter__c/fields/Official_ZIP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Official_ZIP_Postal_Code__c</fullName>
    <label>Official ZIP/Postal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>