force-app/main/default/objects/Visa_Letter__c/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <label>Sex</label>
    <length>80</length>
    <type>Text</type>
</CustomField>